# LLM_hindi_Voice

./: .env.example  .gitignore  README.md  hello.py  manual_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: main.py
app/api/v1/routers/: auth.py  example.py  health.py  sessions.py  voice.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  uuid7.py
app/data/: hinglish_slang.txt
app/models/: db_models.py  schemas.py
app/services/: auth_service.py  example_service.py  llm_service.py  memory_service.py  stt_service.py  tts_service.py
tests/: conftest.py  test_example.py  test_health.py  test_voice.py
