[project]
name = "ai-voice-assi"
version = "0.1.0"
description = "Hindi-aware AI Voice Assistant — STT → LLM → TTS pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.133.1",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # AI / OpenAI (STT + LLM + TTS)
    "openai>=1.14.0",
    # Async utilities
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
